webui/src/scss/_common.scss
@use 'sass:color';
@use 'variables' as *;

h4 {
	font-weight: bold;
}

.action-buttons {
	text-align: center;

	// make compact
	width: 1px;

	.button {
		text-transform: uppercase;

		padding: 4px;

		&:disabled {
			opacity: 0.2;
		}
	}

	.button-primary.disabled {
		opacity: 0.5;
	}
}

.right {
	float: right;
}

h4,
h5,
legend {
	.button-group {
		float: right;
	}
	.button {
		float: right;
	}
}

// special case, mainly for context help buttons: add button-inline to the <h4> or <h5> element to prevent buttons from floating right
h4.button-inline,
h5.button-inline {
	display: flex;

	.context-help-button,
	.button,
	.button-group {
		display: inline-flex;
		align-items: center;
		padding-left: 0.75em;
	}

	.context-help-button-btn {
		box-shadow: 1px 2px 1px 0px rgb(0 0 0 / 25%);

		.svg-inline--fa {
			width: 1.5em;
			height: 1.5em;
		}
	}
}

// set the size of context-help-buttons for "settings category rows" and similar circumstances (doesn't actually affect the position)
.help-button-float,
.settings-category-row {
	.context-help-button-btn {
		width: 1.5em;
		height: 1.5em;
		box-shadow: 1px 2px 1px 0px rgb(0 0 0 / 25%);

		.svg-inline--fa {
			width: 1.5em;
			height: 1.5em;
		}
	}
}

.button-group {
	// do not set "overflow: hidden;" globally! if needed put it in an appropriate scope. If set here it prevents dropdown menus!
	&.margin-bottom {
		margin-bottom: 1rem;
	}

	.switch-input {
		margin-top: 0.3rem;
	}
}

h5 {
	font-weight: bold;
}

.table-tight {
	width: 100%;
}

.table-tight td,
th {
	padding: 5px 10px;
	border-bottom: 1px solid #ddd;
}

.table-responsive-sm {
	border: 1px solid #ddd;
	border-collapse: collapse;
	box-shadow: 0px 2px 21px -10px rgba(0, 0, 0, 0.2);

	th {
		// border-radius: 10%;
		background-color: #f0f0f0;
		padding-top: 6px;
		padding-bottom: 6px;

		&.fit {
			width: 1px;
		}
	}

	td {
		vertical-align: middle;
	}
}

.table-header-buttons {
	float: right;
	margin: 0;

	button {
		padding: 1px 5px;
		opacity: 0.4;

		&.active {
			opacity: 1;
		}

		&.button-secondary {
			background-color: white;
			color: black;
		}
	}
}

code {
	font-family: 'Fira Code', monospace;
	font-size: 1.05em;
}

@supports (font-variation-settings: normal) {
	code {
		font-family: 'Fira Code VF', monospace;
	}
}

.widget-clickable,
.hand {
	cursor: pointer;
}

.rounded-start-0 {
	border-top-left-radius: 0;
	border-bottom-left-radius: 0;
}

.rounded-end-0 {
	border-top-right-radius: 0;
	border-bottom-right-radius: 0;
}

.c-app {
	color: #222;
}

.form-control[type='text']:read-only {
	background-color: #eeeeee;
}
.table {
	color: #111;
}

.markdown {
	video {
		width: 100%;
		height: auto;
		border-radius: 0.5rem;
		margin: 1rem 0;
	}

	img {
		max-width: 100%;
		height: auto;
	}
}

.text-right {
	text-align: right;
}

.currentlyNone {
	color: #777;
	text-align: center;
	padding: 30px !important;
}

.flex {
	display: flex;
}

.w-full {
	width: 100%;
}
.gap-1rem {
	gap: 1rem;
}
.gap-2rem {
	gap: 2rem;
}
.column-gap-1rem {
	column-gap: 1rem;
}
.flex-wrap {
	flex-wrap: wrap;
}

.c-switch-input {
	display: none;
}

.displayNone {
	display: none;
}

.option-field {
	margin-bottom: 0.75rem;
}

.noBorder td {
	border: none;
}

.nav-item {
	&.hidden {
		display: none;
	}
}

.form-control,
.form-control:focus,
.form-select {
	background-color: #fff;
}

.float-right {
	float: right;
}

table .td-reorder {
	cursor: ns-resize;
	background-color: #f7f7f7;

	padding-right: 10px;
	padding-left: 10px;
	vertical-align: middle;

	// as narrow as possible
	width: 0;

	svg {
		color: #333;
	}
}

.list-group {
	--cui-list-group-bg: #f7f7f7;
}

.form-range {
	align-self: center;
}

svg.button-size {
	margin: $btn-padding-y $btn-padding-x;
}
svg.pad-left {
	margin-left: 0.5rem;
}

.notification-count {
	background-color: $primary;
	color: #fff;
	font-weight: bold;

	border-radius: 50%;
	// padding: 0.1rem;
	font-size: 0.7rem;
	vertical-align: top;
	text-align: center;

	// margin-right: -0.5rem;
	min-width: calc(var(--cui-body-line-height) * 1em);
	display: inline-block;
}

.grow {
	flex-grow: 1;
}

.h-fit-content {
	height: fit-content;
}

.text-decoration-none {
	--cui-link-decoration: none;
}

.field-with-expression {
	display: flex;
	gap: 0.5rem;

	.expression-field {
		flex-grow: 1;

		align-self: center;
	}

	.expression-toggle-button {
		justify-self: flex-end;
		align-self: stretch;

		.button {
			height: 100%;
			width: 3em;
		}
	}
}

.min-h-0 {
	min-height: 0;
}
.min-w-0 {
	min-width: 0;
}

